<resources>
  <string name="app_name">Slate</string>
  <string name="hello_slate_user">Hello Slate User!</string>
  <string name="welcome">Welcome! This is your home screen!</string>
  <string name="click_to_create">Click the \'+\' button to create a new task</string>

  <!-- Create Task form fields -->
  <string name="fill_create_form">Fill new task details in the form below</string>
  <string name="task_name_label">Task Name</string>
  <string name="task_dl_date_label">Deadline Date</string>
  <string name="task_dl_time_label">Deadline Time</string>
  <string name="task_duration_label">Duration (minutes)</string>

  <!-- Deadline Fill Values -->
  <string name="dl_date_fill">%s/%s/%s</string>
  <string name="dl_time_fill">%s:%s:%s</string>
  <string name="create_task_button">SKED TASK</string>
  <string name="sign_out">Sign Out</string>
  <string name="tasks">Tasks</string>
  <string name="calendar">Calendar</string>
  <string name="rewards">Rewards</string>
  <string name="see_your_cal">You can see your Calendar here!</string>
  <string name="see_your_rewards">You can see your Rewards here!</string>

</resources>
